--- a/sampla-file.env
+++ b/sampla-file.env
@@ -1,3 +1,3 @@
-comment : to Access this file the file name must be   .env   only so remove prefixed sample-file && give values to REACT_APP_BASE_URI show in Read.me file
+comment : to Access this file the file name must be   .env   only so remove prefixed sample-file && give values to REACT_APP_BASE_URI show in login credential in read.me file
 
 REACT_APP_BASE_URI = url
